<resources>
    <string name="app_name">Adoptame</string>
    <string name="error">Error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Las noticias del día</string>
    <string name="ListarProductos">Noticias del mundo</string>
    <string name="CarritoProductos">Noticias favoritas</string>

    <string name="tab_1">Negocios</string>
    <string name="tab_2">Entretenimiento</string>
    <string name="tab_3">General</string>
    <string name="tab_4">Salud</string>
    <string name="tab_5">Ciencias</string>
</resources>